--- a/index.html
+++ b/index.html
@@ -7,20 +7,83 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-<link rel="stylesheet" href="./css/index.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="assets/css/style.min.css">
 <title>Micro Api - Home</title>
 </head>
 <body id="home">
+  <header>
+    <!-- Write header here -->
+    <div class="container">
+      <div class="row pt-4 pb-4 header__wrapper">
+        <div class="col-lg-2 col-md-6 col-sm-6 logo__container">
+          <a href="#" class="logo"><img src="./assets/img/logo.svg" alt="site logo"></a>
+        </div>
 
-  <!-- Header start here -->
+        <nav class="col-lg-6">
+          <ul class="nav__menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">Documentation</a></li>
+          </ul>
+        </nav>
+
+        <div class="col-lg-4 menu__button__container">
+          <a href="#"><button class="secondary-btn">Sign In</button></a>
+          <a href="#"><button class="primary-btn">Sign Up</button></a>
+        </div>
+
+        <div class="mobile__nav">
+          <div class="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+
+          <div class="mobile__menu">
+            <nav class="nav">
+              <div class="search__form">
+                <label for="search">
+                  <input type="text" name="search" placeholder="Search...">
+                </label>
+                <div class="search__icon">
+                  <i class="fas fa-search"></i>
+                </div>
+              </div>
+
+              <ul class="mobile__nav__menu">
+                <li><a href="#"><b>Home</b></a></li>
+                <li><a href="#"><b>About us</b></a></li>
+                <li><a href="#"><b>Contact us</b></a></li>
+                <li><a href="#"><b>Documentation</b></a></li>
+                <li>
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                </li>
+              </ul>
+
+              <div class="menu__logo">
+                <a href="#"><img src="./assets/img/logo.svg" alt=""></a>
+              </div>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+
   <header class="header">
     <div class="header__container">
         <div class="header__content">
-            <h1 class="header__title">Open Source APIs for </h1>
-            <h1 class="header__title">Individuals and Enterprises </h1>
+            <h1 class="header__title">Open Source APIs for <br>Individuals and Enterprises </h1>
             <p class="header__description">MicroAPi is a library of microservice APIs, built and organized for your software team to get that project running.</p>
         </div>
-        <div class="header__box">Content</div>  
+        <div class="header__box__container">
+          <div class="header__box"></div>
+        </div>
+      </div>  
         <div class="header__content">
             <h3 class="header__title-two">The best open source microservice</h3>
             <p class="header__description">We make it easy for you or your co-operation to build and organize your database seemlessly at speeds you could only dream about </p>
@@ -53,21 +116,174 @@
  
   <!-- Main body goes here -->
     <main>
-        <section class="main">
-            <div class="main__container">
-                <div class="main__content">
-                    <h3 class="main__title">1. Dashboard that works.</h3>
-                    <p class="main__description">MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag and drop your APIs at ease. It is designed to help you curate your website, work on them and publish as you please.</p>
-                </div>
-                <div class="main__content">
-    
-                </div>
+      <section class="main-one">
+          <div class="main-one__container">
+              <div class="main-one__content">
+                  <h3 class="main-one__title">1. Dashboard that works.</h3>
+                  <p class="main-one__description">MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag and drop your APIs at ease. It is designed to help you curate your website, work on them and publish as you please.</p>
+              </div>
+              <div class="main-one__content">
+                <div class="main-one__box__container">
+                  <div class="main-one__box"></div>
+                </div> 
+              </div>
             </div>
+      </section>
+      <section class="main-two">
+        <div class="main-two__container">
+            <div class="main-two__content">
+                <h3 class="main-two__title">Integrate well with your git provider</h3>
+            </div>
+            <div class="main-two__content">
+              <div class="main-two__box__container">
+                  <ul class="main-two__list list-inline">
+                    <li class="main-two__list__item list-inline-item">
+                      <a href="#"><i class="fa fa-github fa-3x"></i></a>
+                    </li>  
+                    <li class="main-two__list__item list-inline-item">
+                      <a href="#"><i class="fa fa-gitlab fa-3x"></i></a>
+                    </li>
+                    <li class="main-two__list__item list-inline-item"> 
+                      <a href="#"><i class="fa fa-bitbucket fa-3x"></i></a>
+                    </li>
+                  </ul>
+              </div> 
+            </div>
+        </div>
+    </section>  
+    <section class="main-one">
+      <div class="main-one__container">
+          <div class="main-one__content">
+              <h3 class="main-one__title">2. Dashboard that works.</h3>
+              <p class="main-one__description">MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag and drop your APIs at ease. It is designed to help you curate your website, work on them and publish as you please.</p>
+          </div>
+          <div class="main-one__content">
+            <div class="main-one__box__container">
+              <div class="main-one__box"></div>
+            </div> 
+          </div>
+        </div>
+  </section> 
+  <section class="main-two">
+    <div class="main-two__container">
+        <div class="main-two__content">
+            <h3 class="main-two__title">Integrate well with your git provider</h3>
+        </div>
+        <div class="main-two__content">
+          <div class="main-two__box__container">
+              <ul class="main-two__list list-inline">
+                <li class="main-two__list__item list-inline-item">
+                  <a href="#"><img class="img-fluid" src="./assets/img/react-icon.png"></a>
+                </li> 
+                <li class="main-two__list__item list-inline-item">
+                  <a href="#"><img class="img-fluid" src="./assets/img/ember-icon.png"></a>
+                </li> 
+                <li class="main-two__list__item list-inline-item">
+                  <a href="#"><img class="img-fluid" src="./assets/img/angular-icon.png"></a>
+                </li>  
+                <li class="main-two__list__item list-inline-item"> 
+                  <a href="#"><img class="img-fluid" src="./assets/img/gatsby-icon.png"></a>
+                </li>
+              </ul>
+          </div> 
+        </div>
+    </div>
+</section> 
+<section>
+  <div class="main-two">
+    <div class="main-two__container">
+        <div class="main-two__content">
+            <h3 class="main-two__title">Available APIs</h3>
+            <p class="main-two__description">Here’s a list of APIs that we currently have for you, we’ll be adding more in subsequent times </p>
+        </div>
+    </div>
+  </div>
+</section>   
+<section class=" main-three d-flex justify-content-around flex-wrap">
+  <div class="main-three__content">
+      <h1 class="main-three__content__title">SMS API</h1>
+      <p class="main-three__content__description">Service that let's <br> you set senderID or<br> userID, to enable <br>you identify all <br>the transactions</p>
+      <a href="#" class="main-three__content__link">Learn More</a>
+    </div>
+  <div class="main-three__content">
+    <h1 class="main-three__content__title">Blog API</h1>
+    <p class="main-three__content__description">Service that let's <br> you set senderID or<br> userID, to enable <br>you identify all <br>the transactions</p>
+    <a href="#" class="main-three__content__link">Learn More</a>
+  </div>
+<div class="main-three__content">
+  <h1 class="main-three__content__title">Comment API</h1>
+  <p class="main-three__content__description">Service that let's <br> you set senderID or<br> userID, to enable <br>you identify all <br>the transactions</p>
+  <a href="#" class="main-three__content__link">Learn More</a>
+</div>
+<div class="main-three__content">
+  <h1 class="main-three__content__title">Notifications API</h1>
+  <p class="main-three__content__description">Service that let's <br> you set senderID or<br> userID, to enable <br>you identify all <br>the transactions</p>
+  <a href="#" class="main-three__content__link">Learn More</a>
+</div>
+<div class="main-three__content">
+  <h1 class="main-three__content__title">User Management API</h1>
+  <p class="main-three__content__description">Service that let's <br> you set senderID or<br> userID, to enable <br>you identify all <br>the transactions</p>
+  <a href="#" class="main-three__content__link">Learn More</a>
+</div>
+<div class="main-three__content">
+  <h1 class="main-three__content__title">User Management API</h1>
+  <p class="main-three__content__description">Service that let's <br> you set senderID or<br> userID, to enable <br>you identify all <br>the transactions</p>
+  <a href="#" class="main-three__content__link">Learn More</a>
+</div>
+</section>   
 
-        </section>
-    </main>
+<section class="main-one">
+  <div class="main-one__container">
+      <div class="main-one__content">
+          <h3 class="main-one__title">Make Your work seamless</h3>
+          <a href="#" style="color:#fff; background-color: #1A1B2D; padding: 0.1em 2em;"> Get Started</a>
+      </div>
+    </div>
+</section>
+
+  </main>
  
-  <!-- Footer start here -->
+
+
+
+   <footer>
+    <!-- Write footer here -->    
+    <div class="container pt-5 pb-5 footer__wrapper">
+      <div class="footer__logo__container">
+        <div class="footer__logo">
+          <a href="#"><img src="./assets/img/logo.svg" alt="footer logo"></a>
+        </div>
+      </div>
+
+      <div class="footer__menus__container">
+        <div>
+          <h6>Product</h6>
+          <ul>
+            <li><a href="#">Authentication API</a></li>
+            <li><a href="#">Models</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <h6>Collaboration</h6>
+          <ul>
+            <li><a href="#">Comments</a></li>
+            <li><a href="#">Track Changes</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <h6>Explore</h6>
+          <ul>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">About Us</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
