--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="assets/css/style.min.css">
-<title>Micro Api - Home</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="Description" content="Enter your description here" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/style.min.css">
+  <title>Micro Api - Home</title>
 </head>
+
 <body id="home">
   <header>
     <!-- Write header here -->
@@ -74,180 +76,108 @@
     </div>
   </header>
 
-  <header class="header">
-    <div class="header__container">
-        <div class="header__content">
-            <h1 class="header__title">Open Source APIs for <br>Individuals and Enterprises </h1>
-            <p class="header__description">MicroAPi is a library of microservice APIs, built and organized for your software team to get that project running.</p>
-        </div>
-        <div class="header__box__container">
-          <div class="header__box"></div>
-        </div>
-      </div>  
-        <div class="header__content">
-            <h3 class="header__title-two">The best open source microservice</h3>
-            <p class="header__description">We make it easy for you or your co-operation to build and organize your database seemlessly at speeds you could only dream about </p>
-        </div>
-        <div class="header__content--three">
-            <h4 class="header__title-three">Why MicroApi?</h4>
-            <div class="header__content--three__group">
-                <div class="header__content--three__group__content" >
-                    <h4 class="header__text">No-code Tool</h4>
-                    <div>
-                        <p class="header__info"> Build amazing apps faster. Our API saves you months of integration testing and support headache for you and your customers.</p>
-                    </div>   
-                </div>
-                <div class="header__content--three__group__content" >
-                    <h4 class="header__text">No-code Tool</h4>
-                    <div>
-                        <p class="header__info"> Build amazing apps faster. Our API saves you months of integration testing and support headache for you and your customers.</p>
-                    </div>   
-                </div>
-                <div class="header__content--three__group__content" >
-                    <h4 class="header__text">No-code Tool</h4>
-                    <div>
-                        <p class="header__info"> Build amazing apps faster. Our API saves you months of integration testing and support headache for you and your customers.</p>
-                    </div>   
-                </div>
-            </div>
-        </div>
-    </div>
-  </header>
- 
-  <!-- Main body goes here -->
-    <main>
-      <section class="main-one">
-          <div class="main-one__container">
-              <div class="main-one__content">
-                  <h3 class="main-one__title">1. Dashboard that works.</h3>
-                  <p class="main-one__description">MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag and drop your APIs at ease. It is designed to help you curate your website, work on them and publish as you please.</p>
-              </div>
-              <div class="main-one__content">
-                <div class="main-one__box__container">
-                  <div class="main-one__box"></div>
-                </div> 
+  <main>
+    <section>
+        <div class="container-fluid">
+            <div class="row item-one ">
+              <div class="col-md-12 text-center">
+                <h1>Open Source APIs for</h1>
+                <h1>Individuals and Enterprises </h1>
+                <p>MicroAPi is a library of microservice APIs, built and organized <br>for your software team to get that project running.</p>
               </div>
             </div>
-      </section>
-      <section class="main-two">
-        <div class="main-two__container">
-            <div class="main-two__content">
-                <h3 class="main-two__title">Integrate well with your git provider</h3>
+            <div class="row dashboard">
+              <div class="col-md-12 text-center dashboard__container">
+                 <img class="img-fluid dashboard__container__img" src="./assets/img/placeholder.png" alt="placeholder">
+              </div>
             </div>
-            <div class="main-two__content">
-              <div class="main-two__box__container">
-                  <ul class="main-two__list list-inline">
-                    <li class="main-two__list__item list-inline-item">
-                      <a href="#"><i class="fa fa-github fa-3x"></i></a>
-                    </li>  
-                    <li class="main-two__list__item list-inline-item">
-                      <a href="#"><i class="fa fa-gitlab fa-3x"></i></a>
-                    </li>
-                    <li class="main-two__list__item list-inline-item"> 
-                      <a href="#"><i class="fa fa-bitbucket fa-3x"></i></a>
-                    </li>
-                  </ul>
-              </div> 
+            <div class="row item-two mt-5">
+              <div class="col-md-12 text-center">
+                <h1>The best open source micro service</h1>
+                <p>We make it easy for you or your co-operation to build and organize your<br> database seemlessly at speeds you could only dream about </p>
+              </div>
             </div>
-        </div>
-    </section>  
-    <section class="main-one">
-      <div class="main-one__container">
-          <div class="main-one__content">
-              <h3 class="main-one__title">2. Dashboard that works.</h3>
-              <p class="main-one__description">MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag and drop your APIs at ease. It is designed to help you curate your website, work on them and publish as you please.</p>
+            <div class="mt-5 item-three text-center">
+              <h5>Why MicroAPI ?</h5>
+            </div>
+            <div class="container">
+              <div class="row mt-3 item-four">
+                <div class="col-md-3"> 
+                  <p>We make it easy for you or your co-operation to build and organize your<br> database seemlessly at speeds you could only dream about </p>
+                </div>
+                <div class="col-md-3"> 
+                  <p>We make it easy for you or your co-operation to build and organize your<br> database seemlessly at speeds you could only dream about </p>
+                </div>
+                <div class="col-md-3"> 
+                  <p>We make it easy for you or your co-operation to build and organize your<br> database seemlessly at speeds you could only dream about </p>
+                </div>
+              </div>
           </div>
-          <div class="main-one__content">
-            <div class="main-one__box__container">
-              <div class="main-one__box"></div>
-            </div> 
+          
+          <div class="container item-five">
+            <div class="row mt-3">
+              <div class="col-md-12"> 
+                <h1>1. Dashboard that works</h1>
+                <p> MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag 
+                  and drop your APIs at ease. It is designed to help you 
+                  curate your website, work on them and publish as you please.</p>
+                  <div class="item-five__image-container">
+                  <img class="img-fluid item-five__image-container__img" src="./assets/img/placeholder.png" alt="placeholder">  
+                </div>
+              </div>      
+            </div>
           </div>
-        </div>
-  </section> 
-  <section class="main-two">
-    <div class="main-two__container">
-        <div class="main-two__content">
-            <h3 class="main-two__title">Integrate well with your git provider</h3>
-        </div>
-        <div class="main-two__content">
-          <div class="main-two__box__container">
-              <ul class="main-two__list list-inline">
-                <li class="main-two__list__item list-inline-item">
-                  <a href="#"><img class="img-fluid" src="./assets/img/react-icon.png"></a>
-                </li> 
-                <li class="main-two__list__item list-inline-item">
-                  <a href="#"><img class="img-fluid" src="./assets/img/ember-icon.png"></a>
-                </li> 
-                <li class="main-two__list__item list-inline-item">
-                  <a href="#"><img class="img-fluid" src="./assets/img/angular-icon.png"></a>
-                </li>  
-                <li class="main-two__list__item list-inline-item"> 
-                  <a href="#"><img class="img-fluid" src="./assets/img/gatsby-icon.png"></a>
-                </li>
-              </ul>
-          </div> 
-        </div>
-    </div>
-</section> 
-<section>
-  <div class="main-two">
-    <div class="main-two__container">
-        <div class="main-two__content">
-            <h3 class="main-two__title">Available APIs</h3>
-            <p class="main-two__description">Here’s a list of APIs that we currently have for you, we’ll be adding more in subsequent times </p>
-        </div>
-    </div>
-  </div>
-</section>   
-<section class=" main-three d-flex justify-content-around flex-wrap">
-  <div class="main-three__content">
-      <h1 class="main-three__content__title">SMS API</h1>
-      <p class="main-three__content__description">Service that let's <br> you set senderID or<br> userID, to enable <br>you identify all <br>the transactions</p>
-      <a href="#" class="main-three__content__link">Learn More</a>
-    </div>
-  <div class="main-three__content">
-    <h1 class="main-three__content__title">Blog API</h1>
-    <p class="main-three__content__description">Service that let's <br> you set senderID or<br> userID, to enable <br>you identify all <br>the transactions</p>
-    <a href="#" class="main-three__content__link">Learn More</a>
-  </div>
-<div class="main-three__content">
-  <h1 class="main-three__content__title">Comment API</h1>
-  <p class="main-three__content__description">Service that let's <br> you set senderID or<br> userID, to enable <br>you identify all <br>the transactions</p>
-  <a href="#" class="main-three__content__link">Learn More</a>
-</div>
-<div class="main-three__content">
-  <h1 class="main-three__content__title">Notifications API</h1>
-  <p class="main-three__content__description">Service that let's <br> you set senderID or<br> userID, to enable <br>you identify all <br>the transactions</p>
-  <a href="#" class="main-three__content__link">Learn More</a>
-</div>
-<div class="main-three__content">
-  <h1 class="main-three__content__title">User Management API</h1>
-  <p class="main-three__content__description">Service that let's <br> you set senderID or<br> userID, to enable <br>you identify all <br>the transactions</p>
-  <a href="#" class="main-three__content__link">Learn More</a>
-</div>
-<div class="main-three__content">
-  <h1 class="main-three__content__title">User Management API</h1>
-  <p class="main-three__content__description">Service that let's <br> you set senderID or<br> userID, to enable <br>you identify all <br>the transactions</p>
-  <a href="#" class="main-three__content__link">Learn More</a>
-</div>
-</section>   
 
-<section class="main-one">
-  <div class="main-one__container">
-      <div class="main-one__content">
-          <h3 class="main-one__title">Make Your work seamless</h3>
-          <a href="#" style="color:#fff; background-color: #1A1B2D; padding: 0.1em 2em;"> Get Started</a>
-      </div>
-    </div>
-</section>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12 mb-3"> 
+                <h5 class="text-center">Integrate well with your git provider</h5>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 item-six">
+                <a href="#"><i class="fa fa-bitbucket fa-3x"></i></a>
+                <a href="#"><i class="fa fa-github fa-3x"></i></a>
+                <a href="#"><i class="fa fa-gitlab fa-3x"></i></a>
+              </div>     
+            </div>
+          </div>
 
+
+          <div class="container item-seven">
+            <div class="row mt-3">
+              <div class="col-md-12 mb-5"> 
+                <h1>2. Dashboard that works</h1>
+                <p> MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag 
+                  and drop your APIs at ease. It is designed to help you 
+                  curate your website, work on them and publish as you please.</p>
+                  <div class="item-seven__image-container">
+                    <div>
+                    <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/react-icon.png"></a> 
+                  </div>
+                  <div>
+                    <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/ember-icon.png"></a>
+                  </div>
+                  <div>
+                    <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/angular-icon.png"></a>
+                  </div>
+                  <div>
+                    <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/gatsby-icon.png"></a>
+                  </div>
+                </div>
+              </div>      
+            </div>
+          </div>
+
+
+
+
+        </div>
+    </section>
   </main>
- 
 
-
-
-   <footer>
-    <!-- Write footer here -->    
+  <footer>
+    <!-- Write footer here -->
     <div class="container pt-5 pb-5 footer__wrapper">
       <div class="footer__logo__container">
         <div class="footer__logo">
@@ -285,8 +215,10 @@
   </footer>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <script src="assets/js/nav.js"></script>
 </body>
+
 </html>
