--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="row item-two mt-5">
               <div class="col-md-12 text-center">
                 <h1>The best open source micro service</h1>
-                <p>We make it easy for you or your co-operation to build and organize your<br> database seemlessly at speeds you could only dream about </p>
+                <p class="item-four__description" >We make it easy for you or your co-operation to build and organize your<br> database seemlessly at speeds you could only dream about </p>
               </div>
             </div>
             <div class="mt-5 item-three text-center">
@@ -102,19 +102,22 @@
             </div>
             <div class="container">
               <div class="row mt-3 item-four">
-                <div class="col-md-3"> 
-                  <p>We make it easy for you or your co-operation to build and organize your<br> database seemlessly at speeds you could only dream about </p>
+                <div class="col-md-3 item-four__content">
+                  <h6 class="item-four__header text-center">No-Code Tool</h6>
+                  <p class="item-four__description">Build amazing apps faster. Our API saves you months of integration testing and support headache for you and your customers. </p>
                 </div>
-                <div class="col-md-3"> 
-                  <p>We make it easy for you or your co-operation to build and organize your<br> database seemlessly at speeds you could only dream about </p>
+                <div class="col-md-3 item-four__content"> 
+                  <h6 class="item-four__header text-center">Fast Implementation</h6>
+                  <p class="item-four__description">Build amazing apps faster. Our API saves you months of integration testing and support headache for you and your customers. </p>
                 </div>
-                <div class="col-md-3"> 
-                  <p>We make it easy for you or your co-operation to build and organize your<br> database seemlessly at speeds you could only dream about </p>
+                <div class="col-md-3 item-four__content"> 
+                  <h6 class="item-four__header text-center">Easy to use</h6>
+                  <p class="item-four__description">Build amazing apps faster. Our API saves you months of integration testing and support headache for you and your customers. </p>
                 </div>
               </div>
           </div>
           
-          <div class="container item-five">
+          <div class="container-fluid item-five">
             <div class="row mt-3">
               <div class="col-md-12"> 
                 <h1>1. Dashboard that works</h1>
@@ -130,47 +133,113 @@
 
           <div class="container">
             <div class="row">
-              <div class="col-md-12 mb-3"> 
-                <h5 class="text-center">Integrate well with your git provider</h5>
+              <div class="col-md-12 my-5 item-ten"> 
+                <h5 class="text-center item-ten__text">Integrates well with your git provider</h5>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12 item-six">
-                <a href="#"><i class="fa fa-bitbucket fa-3x"></i></a>
-                <a href="#"><i class="fa fa-github fa-3x"></i></a>
-                <a href="#"><i class="fa fa-gitlab fa-3x"></i></a>
+                <a href="#"><i class="fa fa-github fa-3x item-six__icon"></i></a>
+                <a href="#"><i class="fa fa-gitlab fa-3x item-six__icon"></i></a>
+                <a href="#"><i class="fa fa-bitbucket fa-3x item-six__icon"></i></a>
               </div>     
             </div>
           </div>
 
 
-          <div class="container item-seven">
+          <div class="container-fluid item-seven">
             <div class="row mt-3">
               <div class="col-md-12 mb-5"> 
                 <h1>2. Dashboard that works</h1>
                 <p> MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag 
                   and drop your APIs at ease. It is designed to help you 
                   curate your website, work on them and publish as you please.</p>
-                  <div class="item-seven__image-container">
-                    <div>
-                    <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/react-icon.png"></a> 
-                  </div>
-                  <div>
-                    <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/ember-icon.png"></a>
-                  </div>
-                  <div>
-                    <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/angular-icon.png"></a>
-                  </div>
-                  <div>
-                    <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/gatsby-icon.png"></a>
+                  <div class="item-seven__container">
+                    <img class="img-fluid item-seven__img" src="./assets/img/placeholder.png" alt="placeholder">
                   </div>
                 </div>
               </div>      
             </div>
+            <div class="item-ten__other">
+              <div class="col-md-12 my-5 item-ten"> 
+                <h5 class="text-center item-ten__text">Seamless integration with your favorite frameworks</h5>
+              </div>
+              <div class="item-seven__image-container">
+              <div>
+                <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/react-icon.png"></a> 
+              </div>
+              <div>
+                <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/ember-icon.png"></a>
+              </div>
+              <div>
+                <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/angular-icon.png"></a>
+              </div>
+              <div>
+                <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/gatsby-icon.png"></a>
+              </div>
+            </div>
           </div>
 
+          <div class="container-fluid mt-5 item-eight">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-12 text-center">
+                  <h1>Available APIs</h1>
+                  <p>Here’s a list of APIs that we currently have for you, we’ll be adding more in subsequent times</p>
+                </div>
+              </div>
+            </div>
+          </div> 
 
-
+          <div class="container-fluid">
+            <div class="row item-nine">
+              <div class="col-md-6 item-nine__content">
+                <div class="item-nine__item mb-5">
+                <h1>SMS API</h1>
+                <p> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
+                <a href="#" class="item-nine__item__link">Learn More</a>
+                </div>
+              </div>
+              <div class="col-md-6  item-nine__content">
+                <div class="item-nine__item mb-5">
+                <h1>Blog API</h1>
+                <p> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
+                <a href="#" class="item-nine__item__link">Learn More</a>
+                </div>
+              </div>
+              <div class="col-md-6 item-nine__content">
+                <div class="item-nine__item mb-5">
+                <h1>CommentsAPI</h1>
+                <p> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
+                <a href="#" class="item-nine__item__link">Learn More</a>
+              </div>
+              </div>
+              <div class="col-md-6 item-nine__content">
+                <div class="item-nine__item mb-5">
+                <h1>Notification API</h1>
+                <p> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
+                <a href="#" class="item-nine__item__link">Learn More</a>
+                </div>
+              </div>
+              <div class="col-md-6 item-nine__content">
+                <div class="item-nine__item mb-5">
+                <h1>User Management</h1>
+                <p> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
+                <a href="#" class="item-nine__item__link">Learn More</a>
+              </div>
+              </div>
+            </div>
+          </div>
+          <div class="container-fluid mt-5 item-eight--nine">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-12 mb-5 text-center">
+                  <h1 class="mb-5">Make your work seamless</h1>
+                  <a href="#" class="item-nine__button">Get Started</a>
+                </div>
+              </div>
+            </div>
+          </div> 
 
         </div>
     </section>
