--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="row dashboard">
               <div class="col-md-12 text-center dashboard__container">
-                 <img class="img-fluid dashboard__container__img" src="./assets/img/placeholder.png" alt="placeholder">
+                 <img class="img-fluid dashboard__container__img" src="./assets/img/Group 645.png" alt="placeholder">
               </div>
             </div>
             <div class="row item-two mt-5">
@@ -125,7 +125,7 @@
                   and drop your APIs at ease. It is designed to help you 
                   curate your website, work on them and publish as you please.</p>
                   <div class="item-five__image-container">
-                  <img class="img-fluid item-five__image-container__img" src="./assets/img/placeholder.png" alt="placeholder">  
+                  <img class="img-fluid item-five__image-container__img" src="./assets/img/Group 596.png" alt="placeholder">  
                 </div>
               </div>      
             </div>
@@ -155,7 +155,7 @@
                   and drop your APIs at ease. It is designed to help you 
                   curate your website, work on them and publish as you please.</p>
                   <div class="item-seven__container">
-                    <img class="img-fluid item-seven__img" src="./assets/img/placeholder.png" alt="placeholder">
+                    <img class="img-fluid item-seven__img" src="./assets/img/Group 623.png" alt="placeholder">
                   </div>
                 </div>
               </div>      
