--- a/index.html
+++ b/index.html
@@ -81,20 +81,20 @@
         <div class="container-fluid">
             <div class="row item-one ">
               <div class="col-md-12 text-center">
-                <h1>Open Source APIs for</h1>
-                <h1>Individuals and Enterprises </h1>
-                <p>MicroAPi is a library of microservice APIs, built and organized <br>for your software team to get that project running.</p>
+                <h1 class="item-one__header">Open Source APIs for</h1>
+                <h1 class="item-one__header">Individuals and Enterprises </h1>
+                <p class="item-one__text">MicroAPi is a library of microservice APIs, built and organized <br>for your software team to get that project running.</p>
               </div>
             </div>
             <div class="row dashboard">
               <div class="col-md-12 text-center dashboard__container">
-                 <img class="img-fluid dashboard__container__img" src="./assets/img/Group 645.png" alt="placeholder">
+                 <img class="dashboard__container__img" src="./assets/img/Group 645.png" alt="placeholder">
               </div>
             </div>
             <div class="row item-two mt-5">
               <div class="col-md-12 text-center">
-                <h1>The best open source micro service</h1>
-                <p class="item-four__description" >We make it easy for you or your co-operation to build and organize your<br> database seemlessly at speeds you could only dream about </p>
+                <h1 class="item-one__header">The best open source micro service</h1>
+                <p class="item-four__description item-one__text" >We make it easy for you or your co-operation to build and organize your<br> database seemlessly at speeds you could only dream about </p>
               </div>
             </div>
             <div class="mt-5 item-three text-center">
@@ -120,8 +120,8 @@
           <div class="container-fluid item-five">
             <div class="row mt-3">
               <div class="col-md-12"> 
-                <h1>1. Dashboard that works</h1>
-                <p> MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag 
+                <h1 class="item-one__header">1. Dashboard that works</h1>
+                <p class="item-one__text"> MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag 
                   and drop your APIs at ease. It is designed to help you 
                   curate your website, work on them and publish as you please.</p>
                   <div class="item-five__image-container">
@@ -150,12 +150,12 @@
           <div class="container-fluid item-seven">
             <div class="row mt-3">
               <div class="col-md-12 mb-5"> 
-                <h1>2. Dashboard that works</h1>
-                <p> MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag 
+                <h1 class="item-one__header">2. Dashboard that works</h1>
+                <p class="item-one__text"> MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag 
                   and drop your APIs at ease. It is designed to help you 
                   curate your website, work on them and publish as you please.</p>
                   <div class="item-seven__container">
-                    <img class="img-fluid item-seven__img" src="./assets/img/Group 623.png" alt="placeholder">
+                    <img class="img-fluid item-five__image-container__img" src="./assets/img/Group 623.png" alt="placeholder">
                   </div>
                 </div>
               </div>      
@@ -184,8 +184,8 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-12 text-center">
-                  <h1>Available APIs</h1>
-                  <p>Here’s a list of APIs that we currently have for you, we’ll be adding more in subsequent times</p>
+                  <h1 class="item-one__header">Available APIs</h1>
+                  <p  class="item-one__text">Here’s a list of APIs that we currently have for you, we’ll be adding more in subsequent times</p>
                 </div>
               </div>
             </div>
@@ -195,36 +195,36 @@
             <div class="row item-nine">
               <div class="col-md-6 item-nine__content">
                 <div class="item-nine__item mb-5">
-                <h1>SMS API</h1>
-                <p> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
+                <h1 class="item-one__header">SMS API</h1>
+                <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
                 <a href="#" class="item-nine__item__link">Learn More</a>
                 </div>
               </div>
               <div class="col-md-6  item-nine__content">
                 <div class="item-nine__item mb-5">
-                <h1>Blog API</h1>
-                <p> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
+                <h1 class="item-one__header">Blog API</h1>
+                <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
                 <a href="#" class="item-nine__item__link">Learn More</a>
                 </div>
               </div>
               <div class="col-md-6 item-nine__content">
                 <div class="item-nine__item mb-5">
-                <h1>CommentsAPI</h1>
-                <p> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
+                <h1 class="item-one__header">CommentsAPI</h1>
+                <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
                 <a href="#" class="item-nine__item__link">Learn More</a>
               </div>
               </div>
               <div class="col-md-6 item-nine__content">
                 <div class="item-nine__item mb-5">
-                <h1>Notification API</h1>
-                <p> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
+                <h1 class="item-one__header">Notification API</h1>
+                <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
                 <a href="#" class="item-nine__item__link">Learn More</a>
                 </div>
               </div>
               <div class="col-md-6 item-nine__content">
                 <div class="item-nine__item mb-5">
-                <h1>User Management</h1>
-                <p> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
+                <h1 class="item-one__header">User Management</h1>
+                <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
                 <a href="#" class="item-nine__item__link">Learn More</a>
               </div>
               </div>
@@ -234,7 +234,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-12 mb-5 text-center">
-                  <h1 class="mb-5">Make your work seamless</h1>
+                  <h1 class="mb-5 item-one__header">Make your work seamless</h1>
                   <a href="#" class="item-nine__button">Get Started</a>
                 </div>
               </div>
