--- a/index.html
+++ b/index.html
@@ -197,35 +197,35 @@
                 <div class="item-nine__item mb-5">
                 <h1 class="item-one__header">SMS API</h1>
                 <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
-                <a href="#" class="item-nine__item__link">Learn More</a>
+                <a href="#" class="item-nine__item__link item-one__text">Learn More</a>
                 </div>
               </div>
               <div class="col-md-6  item-nine__content">
                 <div class="item-nine__item mb-5">
                 <h1 class="item-one__header">Blog API</h1>
                 <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
-                <a href="#" class="item-nine__item__link">Learn More</a>
+                <a href="#" class="item-nine__item__link item-one__text">Learn More</a>
                 </div>
               </div>
               <div class="col-md-6 item-nine__content">
                 <div class="item-nine__item mb-5">
                 <h1 class="item-one__header">CommentsAPI</h1>
                 <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
-                <a href="#" class="item-nine__item__link">Learn More</a>
+                <a href="#" class="item-nine__item__link item-one__text">Learn More</a>
               </div>
               </div>
               <div class="col-md-6 item-nine__content">
                 <div class="item-nine__item mb-5">
                 <h1 class="item-one__header">Notification API</h1>
                 <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
-                <a href="#" class="item-nine__item__link">Learn More</a>
+                <a href="#" class="item-nine__item__link item-one__text">Learn More</a>
                 </div>
               </div>
               <div class="col-md-6 item-nine__content">
                 <div class="item-nine__item mb-5">
                 <h1 class="item-one__header">User Management</h1>
                 <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
-                <a href="#" class="item-nine__item__link">Learn More</a>
+                <a href="#" class="item-nine__item__link item-one__text">Learn More</a>
               </div>
               </div>
             </div>
