--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
     <div class="container">
       <div class="row pt-4 pb-4 header__wrapper">
         <div class="col-lg-2 col-md-6 col-sm-6 logo__container">
-          <a href="#" class="logo"><img src="./assets/img/logo.svg" alt="site logo"></a>
+          <a href="index.html" class="logo"><img src="./assets/img/logo.svg" alt="site logo"></a>
         </div>
 
         <nav class="col-lg-6">
-          <ul class="nav__menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">Documentation</a></li>
-          </ul>
-        </nav>
+			<ul class="nav__menu">
+			  <li><a href="index.html">Home</a></li>
+			  <li><a href="about.html">About us</a></li>
+			  <li><a href="contact.html">Contact us</a></li>
+			  <li><a href="docs.html">Documentation</a></li>
+			</ul>
+		  </nav>
 
         <div class="col-lg-4 menu__button__container">
-          <a href="#"><button class="secondary-btn">Sign In</button></a>
-          <a href="#"><button class="primary-btn">Sign Up</button></a>
+          <a href="signin1.html" button class="secondary-btn">Sign In</button></a>
+          <a href="signup-1.html"><button class="primary-btn">Sign Up</button></a>
         </div>
 
         <div class="mobile__nav">
@@ -55,11 +55,14 @@
               </div>
 
               <ul class="mobile__nav__menu">
-                <li><a href="#"><b>Home</b></a></li>
-                <li><a href="#"><b>About us</b></a></li>
-                <li><a href="#"><b>Contact us</b></a></li>
-                <li><a href="#"><b>Documentation</b></a></li>
+                <li><a href="index.html"><b>Home</b></a></li>
+                <li><a href="about.html"><b>About us</b></a></li>
+                <li><a href="contact.html"><b>Contact us</b></a></li>
+                <li><a href="docs.html"><b>Documentation</b></a></li>
+                <li><a href="signin1.html"><b>Sign in</b></a></li>
+                <li><a href="signup-1.html"><b>Sign Up</b></a></li>
                 <li>
+
                   <a href="#"><i class="fab fa-facebook-f"></i></a>
                   <a href="#"><i class="fab fa-instagram"></i></a>
                   <a href="#"><i class="fab fa-twitter"></i></a>
@@ -118,13 +121,15 @@
           </div>
           
           <div class="container-fluid item-five">
-            <div class="row mt-3">
-              <div class="col-md-12"> 
-                <h1 class="item-one__header">1. Dashboard that works</h1>
+            <div class="row ">
+              <div class="col-md-12 mb-5"> 
+                <div class="heading">
+                  <h2 class="item-one__header">1. Dashboard that works</h2>
                 <p class="item-one__text"> MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag 
                   and drop your APIs at ease. It is designed to help you 
                   curate your website, work on them and publish as you please.</p>
-                  <div class="item-five__image-container">
+                </div>
+                  <div class="item-five__container">
                   <img class="img-fluid item-five__image-container__img" src="./assets/img/Group 596.png" alt="placeholder">  
                 </div>
               </div>      
@@ -133,12 +138,12 @@
 
           <div class="container">
             <div class="row">
-              <div class="col-md-12 my-5 item-ten"> 
+              <div class="col-md-12 mt-5 mb-5 item-ten"> 
                 <h5 class="text-center item-ten__text">Integrates well with your git provider</h5>
               </div>
             </div>
             <div class="row">
-              <div class="col-md-12 item-six">
+              <div class=" item-six">
                 <a href="#"><i class="fa fa-github fa-3x item-six__icon"></i></a>
                 <a href="#"><i class="fa fa-gitlab fa-3x item-six__icon"></i></a>
                 <a href="#"><i class="fa fa-bitbucket fa-3x item-six__icon"></i></a>
@@ -148,41 +153,45 @@
 
 
           <div class="container-fluid item-seven">
-            <div class="row mt-3">
+            <div class="row  ">
               <div class="col-md-12 mb-5"> 
-                <h1 class="item-one__header">2. Dashboard that works</h1>
-                <p class="item-one__text"> MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag 
-                  and drop your APIs at ease. It is designed to help you 
-                  curate your website, work on them and publish as you please.</p>
+                <div class="heading">
+                  <h2 class="item-one__header">2. Dashboard that works</h2>
+                  <p class="item-one__text"> MicroAPI provides you with a dashboard that is simple and easy to navigate, allowing you drag 
+                    and drop your APIs at ease. It is designed to help you 
+                    curate your website, work on them and publish as you please.</p>
+                </div>
                   <div class="item-seven__container">
                     <img class="img-fluid item-five__image-container__img" src="./assets/img/Group 623.png" alt="placeholder">
                   </div>
                 </div>
               </div>      
             </div>
+
+
             <div class="item-ten__other">
               <div class="col-md-12 my-5 item-ten"> 
                 <h5 class="text-center item-ten__text">Seamless integration with your favorite frameworks</h5>
               </div>
-              <div class="item-seven__image-container">
+              <div class="item-ten__image-container">
               <div>
-                <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/react-icon.png"></a> 
+                <a href="#"><img class="img-fluid  item-ten__image-container__img" src="./assets/img/react-icon.png"></a> 
               </div>
               <div>
-                <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/ember-icon.png"></a>
+                <a href="#"><img class="img-fluid  item-ten__image-container__img" src="./assets/img/ember-icon.png"></a>
               </div>
               <div>
-                <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/angular-icon.png"></a>
+                <a href="#"><img class="img-fluid  item-ten__image-container__img" src="./assets/img/angular-icon.png"></a>
               </div>
               <div>
-                <a href="#"><img class="img-fluid  item-seven__image-container__img" src="./assets/img/gatsby-icon.png"></a>
+                <a href="#"><img class="img-fluid  item-ten__image-container__img" src="./assets/img/gatsby-icon.png"></a>
               </div>
             </div>
           </div>
 
           <div class="container-fluid mt-5 item-eight">
             <div class="container">
-              <div class="row">
+              <div class="row py-5">
                 <div class="col-md-12 text-center">
                   <h1 class="item-one__header">Available APIs</h1>
                   <p  class="item-one__text">Here’s a list of APIs that we currently have for you, we’ll be adding more in subsequent times</p>
@@ -195,47 +204,49 @@
             <div class="row item-nine">
               <div class="col-md-6 item-nine__content">
                 <div class="item-nine__item mb-5">
-                <h1 class="item-one__header">SMS API</h1>
+                <h2 class="item-one__header">SMS API</h2>
                 <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
                 <a href="#" class="item-nine__item__link item-one__text">Learn More</a>
                 </div>
               </div>
               <div class="col-md-6  item-nine__content">
                 <div class="item-nine__item mb-5">
-                <h1 class="item-one__header">Blog API</h1>
+                <h2 class="item-one__header">Blog API</h2>
                 <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
                 <a href="#" class="item-nine__item__link item-one__text">Learn More</a>
                 </div>
               </div>
               <div class="col-md-6 item-nine__content">
                 <div class="item-nine__item mb-5">
-                <h1 class="item-one__header">CommentsAPI</h1>
+                <h2 class="item-one__header">Comments API</h2>
                 <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
                 <a href="#" class="item-nine__item__link item-one__text">Learn More</a>
               </div>
               </div>
               <div class="col-md-6 item-nine__content">
                 <div class="item-nine__item mb-5">
-                <h1 class="item-one__header">Notification API</h1>
+                <h2 class="item-one__header">Notification API</h2>
                 <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
                 <a href="#" class="item-nine__item__link item-one__text">Learn More</a>
                 </div>
               </div>
               <div class="col-md-6 item-nine__content">
                 <div class="item-nine__item mb-5">
-                <h1 class="item-one__header">User Management</h1>
+                <h2 class="item-one__header">User Management</h2>
                 <p class="item-one__text"> Service that let's you set senderID or<br> userID, to enable you identify all the<br> transactions  </p>
                 <a href="#" class="item-nine__item__link item-one__text">Learn More</a>
               </div>
               </div>
             </div>
           </div>
-          <div class="container-fluid mt-5 item-eight--nine">
+      
+          <div class="container-fluid mt-5 item-eleven">
             <div class="container">
               <div class="row">
                 <div class="col-md-12 mb-5 text-center">
                   <h1 class="mb-5 item-one__header">Make your work seamless</h1>
-                  <a href="#" class="item-nine__button">Get Started</a>
+                  <button href="#" class="started_btn">Get Started</button>
+                  <!-- <a href="#" class="item-nine__button">Get Started</a> -->
                 </div>
               </div>
             </div>
@@ -258,9 +269,9 @@
         <div>
           <h6>Product</h6>
           <ul>
-            <li><a href="#">Authentication API</a></li>
+            <li><a href="auth.html">Authentication API</a></li>
             <li><a href="#">Models</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="faq.html">FAQ</a></li>
           </ul>
         </div>
 
@@ -275,8 +286,8 @@
         <div>
           <h6>Explore</h6>
           <ul>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="about.html">About Us</a></li>
           </ul>
         </div>
       </div>
