--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <nav class="col-lg-6">
 			<ul class="nav__menu">
 			  <li><a href="index.html">Home</a></li>
-			  <li><a href="about.html">About us</a></li>
-			  <li><a href="contact.html">Contact us</a></li>
-			  <li><a href="docs.html">Documentation</a></li>
+			  <li><a href="#">About us</a></li>
+			  <li><a href="#">Contact us</a></li>
+			  <li><a href="#">Documentation</a></li>
 			</ul>
 		  </nav>
 
