--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 		  </nav>
 
         <div class="col-lg-4 menu__button__container">
-          <a href="signin1.html" button class="secondary-btn">Sign In</button></a>
-          <a href="signup-1.html"><button class="primary-btn">Sign Up</button></a>
+          <a href="#" button class="secondary-btn">Sign In</button></a>
+          <a href="#"><button class="primary-btn">Sign Up</button></a>
         </div>
 
         <div class="mobile__nav">
@@ -269,9 +269,9 @@
         <div>
           <h6>Product</h6>
           <ul>
-            <li><a href="auth.html">Authentication API</a></li>
+            <li><a href="#">Authentication API</a></li>
             <li><a href="#">Models</a></li>
-            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="#">FAQ</a></li>
           </ul>
         </div>
 
@@ -286,8 +286,8 @@
         <div>
           <h6>Explore</h6>
           <ul>
-            <li><a href="contact.html">Contact Us</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">About Us</a></li>
           </ul>
         </div>
       </div>
